--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .logo {
-    background-image: url("images/amazon_logo.png");
+    background-image: url("https://github.com/Sahil1607cms/AmzonClone/blob/main/amazon_logo.png?raw=true");
     background-size: cover;
     height: 50px;
     width: 100%;
@@ -196,7 +196,7 @@ panel section  */
 /* hero section */
 
 .hero-section {
-    background-image: url("images/hero_image.jpg");
+    background-image: url("hero_image.jpg");
     background-size: cover;
     height: 400px;
     justify-content: center;
@@ -332,7 +332,7 @@ background-color: #485769;
 }
 
 .logo {
-    background-image: url("images/amazon_logo.png");
+    background-image: url("https://github.com/Sahil1607cms/AmzonClone/blob/main/amazon_logo.png?raw=true");
     background-size: cover;
     height: 50px;
     width: 100px;
